--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@mastra/client-js": "^0.16.1",
     "@mastra/core": "^0.21.1",
+    "@mastra/deployer-vercel": "^0.12.12",
     "@mastra/libsql": "^0.15.2",
     "@mastra/loggers": "^0.10.16",
     "@mastra/memory": "^0.15.7",
