--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
   "installCommand": "npm install --omit=dev",
+  "buildCommand": "npm run build",
+  "outputDirectory": ".vercel/output",
   "builds": [
     {
       "src": "index.mjs",
