--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "installCommand": "npm install --omit=dev",
   "buildCommand": "npm run build",
-  "outputDirectory": ".vercel/output",
+  "outputDirectory": ".mastra/output",
   "builds": [
     {
       "src": "index.mjs",
